--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -13,9 +13,11 @@ on:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]  
+  workflow_dispatch:
 
 jobs:
   build:
+    
 
     runs-on: ubuntu-latest
 
