--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,6 +36,7 @@ jobs:
     
   build:  
     runs-on: ubuntu-latest
+    needs: [unittest]
     steps:
     - uses: actions/checkout@v3
     - name: Set up JDK 17
@@ -48,6 +49,7 @@ jobs:
       run: mvn -B package --file pom.xml -DskipTests
       
   deploy:
+    needs: [build]
     runs-on: 
       group: 888_ikluayping
       labels: [self-hosted,"KUATLRDAPP01"]
